fixing spacing on mobile

--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ h1 {
   #game {
     width: 100%;
     position: absolute;
-    left: 2%;
+    left: 10%;
   }
   #game div {
     border: 1px solid black;
@@ -95,12 +95,12 @@ h1 {
     background-size: 100% 100%;
     width: 143px;
     height: 200px;
-    margin: 50px 10px;
+    margin: 50px 20px;
     padding: 25px 20px;
     display: inline-block;
     transition: all 0.2s ease-out;
     justify-content: center;
-    border-radius: 5px;
+    border-radius: 3px;
   }
   .guess-div {
     padding: 20px;
